<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/home_content_fl"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/gray_white"/>


    <RadioGroup
        android:id="@+id/home_rg"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/home_profit_rb"
            style="@style/home_radio_btn_style"
            android:drawableTop="@drawable/selector_home_rb_profit"
            android:text="@string/home_rb_profit" />

        <RadioButton
            android:id="@+id/home_gift_rb"
            style="@style/home_radio_btn_style"
            android:drawableTop="@drawable/selector_home_rb_gift"
            android:text="@string/home_rb_gift" />

        <RadioButton
            android:id="@+id/home_active_rb"
            style="@style/home_radio_btn_style"
            android:drawableTop="@drawable/selector_home_rb_active"
            android:text="@string/home_rb_active" />

        <RadioButton
            android:id="@+id/home_exchange_rb"
            style="@style/home_radio_btn_style"
            android:drawableTop="@drawable/selector_home_rb_exchange"
            android:text="@string/home_rb_exchange" />

        <RadioButton
            android:id="@+id/home_my_rb"
            style="@style/home_radio_btn_style"
            android:drawableTop="@drawable/selector_home_rb_my"
            android:text="@string/home_rb_my" />


    </RadioGroup>

</LinearLayout>