<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/user_regist_iv_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/ic_back_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/regist"
            android:textSize="25sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/user_regist_phone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_userlogin_et"
        android:hint="@string/regist_phone"
        android:paddingLeft="10dp"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/user_regist_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_userlogin_et"
        android:hint="@string/regist_name"
        android:paddingLeft="10dp"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/user_regist_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_userlogin_et"
        android:hint="@string/regist_word"
        android:paddingLeft="10dp"
        android:textSize="12sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shape_userlogin_et"
        android:hint="@string/regist_yaoword"
        android:paddingLeft="10dp"
        android:textSize="12sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_checkBox"
            android:textSize="10sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regist_agree"
            android:textColor="@color/colorAccent"
            android:textSize="10sp" />

    </LinearLayout>

    <Button
        android:id="@+id/user_regist_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/shape_regist_btn"
        android:text="@string/regist_btn"
        android:textColor="@color/shape_regist_text"

        />

</LinearLayout>