<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <!-- 上面的四个图标-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/share_wb_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/logo_sinaweibo"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:text="@string/share_wb"/>

        <TextView
            android:id="@+id/share_wx_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/logo_wechat"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:text="@string/share_wx"/>

        <TextView
            android:id="@+id/share_pyq_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/logo_wechatmoments"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:text="@string/share_pyq"/>

        <TextView
            android:id="@+id/share_qq_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/logo_qq"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:text="@string/share_qq"/>


    </LinearLayout>

    <Button
        android:id="@+id/share_btn"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@drawable/selector_gift_blue_btn"
        android:textColor="@color/selector_btn_text_blue"
        android:layout_marginTop="20dp"
        android:text="@string/public_cancel"/>

</LinearLayout>