<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!-- 1-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gameinfo_firstview"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gameinfo_secondview"
                    android:textColor="@color/user_login_btn"
                    android:textSize="10sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/profit_gameinfo_u_tv"
                android:layout_marginLeft="50dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/user_login_btn"
                android:text="u币" />

            <TextView
                android:id="@+id/profit_gameinfo_task_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textColor="@color/gray_white"
                android:background="@drawable/shape_gameinfofragment_textview"
                android:text="未完成" />
        </LinearLayout>
        <!-- 2-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="35dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gameinfo_fourview"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gameinfo_fiveview"
                    android:textSize="10sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/profit_gameinfo_u_tv2"
                android:layout_marginLeft="60dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="u币" />

            <TextView
                android:id="@+id/profit_gameinfo_task_tv2"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray_white"
                android:background="@drawable/shape_gameinfofragment_textview"
                android:text="未完成" />
        </LinearLayout>


        <!--试玩信息-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/gameinfo_introduceview" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/gameinfo_introduceviewmm" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/gameinfo_introducebigview"
            android:textColor="@color/colorAccent" />

        <!--游戏介绍-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/gameinfo_lovegameintroduce"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/profit_gameinfo_content_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/gameinfo_lovegameintroduce" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/gameinfo_lovegame"
            android:textSize="25dp"
            android:textStyle="bold" />

        <!--猜你喜欢-->
        <LinearLayout
            android:id="@+id/profit_gameinfo_linearlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:orientation="horizontal">
            <!--第一张图片-->

        </LinearLayout>
    </LinearLayout>
</ScrollView>