<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/active_title_name" />
    <android.support.v4.view.ViewPager
        android:layout_marginTop="5dp"
        android:id="@+id/active_iv"
        android:layout_width="match_parent"
        android:layout_height="160dp"
         />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <Button
            android:id="@+id/active_btnone"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/selector_gift_type_left"
            android:textColor="@color/selector_btn_text_blue"
            android:text="@string/active_left_name_btn" />
        <Button
            android:id="@+id/active_btntwo"
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:background="@drawable/selector_gift_type_right"
            android:textColor="@color/selector_btn_text_blue"
            android:text="@string/active_right_name_btn" />

</LinearLayout>
    <android.support.v4.view.ViewPager
        android:layout_marginTop="10dp"
        android:id="@+id/active_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        ></android.support.v4.view.ViewPager>
</LinearLayout>