<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/exchange_title"
        android:textSize="25dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/exchange_left_tv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:background="@drawable/selector_gift_type_left"
            android:gravity="center"
            android:text="@string/exchange_title_left"
            android:clickable="true"
            android:textColor="@color/selector_btn_text_blue" />

        <TextView
            android:id="@+id/exchange_right_tv"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginRight="30dp"
            android:layout_weight="1"
            android:background="@drawable/selector_gift_type_right"
            android:gravity="center"
            android:clickable="true"
            android:text="@string/exchange_title_right"
            android:textColor="@color/selector_btn_text_blue" />


    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:layout_marginTop="15dp"
        android:id="@+id/fragment_exchange_vp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>